contact form changes

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Dental dream</title>
+    <title>Empire of wisdom</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to Dental Dream, where we make your dreams come true. Efficient and affordable, we welcome you
+    <!-- CHANGE THIS -->
+    <!-- <meta name="description" content="Welcome to Dental Dream, where we make your dreams come true. Efficient and affordable, we welcome you
     not only as a client, but also as a friend who came out to visit the beautiful city of Novi Sad." />
     <meta name="keywords" content="dental, tourism, novi sad, tooth, teeth, implants, full denture, root canal tratment, composite crown, porcelain crown, tooth extraction, porcelain veneers, serbia, dream, services, private, practice"
     />
     <meta name="author" content="Aleksandar Beronja" />
-    <meta name="theme-color" content="#D0BB57" />
+    <meta name="theme-color" content="#D0BB57" /> -->
     <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
@@ -27,7 +28,6 @@
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <script src="js/modernizr.custom.79639.js"></script>
 </head>
@@ -47,16 +47,16 @@
             <div class="menu__block">
                 <div class="menu__items">
                     <div class="menu__item">
-                        <a data-toggle="collapse" data-target="#demo" href="#step__block" class="scroll">o nama</a>
+                        <a data-toggle="collapse" data-target="#demo" href="#step__block" class="scroll">O NAMA</a>
                     </div>
                     <div class="menu__item">
-                        <a data-toggle="collapse" data-target="#demo" href="#service__block" class="scroll">galerija</a>
+                        <a data-toggle="collapse" data-target="#demo" href="#service__block" class="scroll">GALERIJA</a>
                     </div>
                     <div class="menu__item">
-                        <a data-toggle="collapse" data-target="#demo" href="#about__block" class="scroll">pansion za pse</a>
+                        <a data-toggle="collapse" data-target="#demo" href="#about__block" class="scroll">PANSION ZA PSE</a>
                     </div>
                     <div class="menu__item">
-                        <a data-toggle="collapse" data-target="#demo" href="#guide__block" class="scroll">kontakt</a>
+                        <a data-toggle="collapse" data-target="#demo" href="#guide__block" class="scroll">KONTAKT</a>
                     </div>
                 </div>
             </div>
@@ -190,8 +190,7 @@
                     <div class="step">
                         <img src="img/footprints3.svg" alt="footprints">
                         <h3>Transport pasa Boban Janković</h3>
-                        <p>Za sve naše klijente smo obezbedili transport za pse širom sveta.
-                            Kontakt: +381 63 214 145
+                        <p>Za sve naše klijente smo obezbedili transport za pse širom sveta. Kontakt: +381 63 214 145
                         </p>
                     </div>
                 </div>
@@ -579,45 +578,45 @@
                     </div>
                 </div>
             </div>
-            <!--      FORM      -->
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="heading__block" id="contact__block">
-                        <h2 class="section__heading">Contact us</h2>
-                    </div>
-                    <div class="form">
-                        <form method="post" action="contact-page.php" class="ccform">
-                            <div class="ccfield-prepend">
-                                <span class="ccform-addon">
-                                    <i class="fa fa-user fa-2x"></i>
-                                </span>
-                                <input id="name__input" class="ccformfield" type="text" name="name" placeholder="Full Name">
-                            </div>
-                            <div class="ccfield-prepend">
-                                <span class="ccform-addon">
-                                    <i class="fa fa-envelope fa-2x"></i>
-                                </span>
-                                <input id="email__input" class="ccformfield" name="email" type="text" placeholder="Email">
-                            </div>
-                            <div class="ccfield-prepend">
-                                <span class="ccform-addon">
-                                    <i class="fa fa-mobile-phone fa-2x"></i>
-                                </span>
-                                <input id="phone__input" class="ccformfield" type="text" name="phone" placeholder="Phone">
-                            </div>
-                            <div class="ccfield-prepend">
-                                <span class="ccform-addon">
-                                    <i class="fa fa-comment fa-2x"></i>
-                                </span>
-                                <textarea id="text__input" class="ccformfield" name="message" rows="8" placeholder="Message"></textarea>
-                            </div>
-                            <div class="ccfield-prepend">
-                                <input class="ccbtn" type="submit" value="SEND" id="submit__button">
-                            </div>
-                        </form>
+        </div>
+        <iframe class="google_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2824.3553829170273!2d20.211297915215393!3d44.93644297909819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a5eae155df4eb%3A0x64cbb8143fccd6d2!2z0JbQtdC70LXQt9C90LjRh9C60LAgMTA5LCDQndC-0LLQsCDQn9Cw0LfQvtCy0LAgMjIzMzA!5e0!3m2!1ssr!2srs!4v1533991009030"
+            height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="contact__block">
+            <div class="container">
+                <!--      FORM      -->
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="heading__block" id="contact__block">
+                            <h2 class="section__heading">Contact us</h2>
+                        </div>
+                        <div class="form">
+                            <form method="post" action="contact-page.php" class="ccform">
+                                <div class="col-12 input__block input-effect">
+                                    <input class="effect-16 input__field" type="text" placeholder="">
+                                    <label>Ime</label>
+                                    <span class="focus-border"></span>
+                                </div>
+                                <div class="col-12 input__block input-effect">
+                                    <input class="effect-16 input__field" type="text" placeholder="">
+                                    <label>Email</label>
+                                    <span class="focus-border"></span>
+                                </div>
+                                <div class="col-12 input__block input-effect">
+                                    <textarea rows="8" class="textearea effect-16 input__field" type="text" placeholder=""></textarea>
+                                    <label>Vaša poruka</label>
+                                    <span class="focus-border"></span>
+                                </div>
+                                <!-- <input id="name__input" class="form__input" type="text" name="name" autocomplete="off" placeholder="Ime"> -->
+                                <!-- <input id="email__input" class="form__input" name="email" type="text" autocomplete="off" placeholder="Email"> -->
+                                <!-- <input id="phone__input" class="form__input" type="text" name="phone" placeholder="Phone"> -->
+                                <!-- <textarea id="text__input" class="form__input" name="message" autocomplete="off" rows="8" placeholder="Vaša poruka"></textarea> -->
+                                <div class="button__block">
+                                    <input class="ccbtn" type="submit" value="POŠALJI" id="submit__button">
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
-
             </div>
         </div>
         <!-- <div class="social__block social__block-mobile">
@@ -693,12 +692,12 @@
 
     <script type="application/ld+json">
         {
-          "@context": "http://schema.org/",
-          "@type": "WebSite",
-          "name": "Dental dream",
-          "url": "http://www.dentaldreamns.com/"
+            "@context": "http://schema.org/",
+            "@type": "WebSite",
+            "name": "Empire of wisdom",
+            "url": "http://www.empireofwisdom.com/"
         }
-        </script>
+    </script>
 
     <script>
         $(function () {
