--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                     data-slice2-scale="1.5">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-2"></div>
-                        <h2>Who are we?</h2>
+                        <h2>Psi su deo našeg života</h2>
                         <blockquote>
-                            <p>Join us and our team of highly trained professionals as we embark on a high quality and affordable
-                                dental care provided by our clinic here in Serbia, Dental Dream.</p>
+                            <p>Odgajivačnica EMPIRE OF WISDOM osnovana je 2010. godine pod rednim FCI brojem 5042. Nalazimo
+                                se u Srbiji, Novoj Pazovi, na samo 30 km od Beograda i 40 km od Novog Sada</p>
                         </blockquote>
                     </div>
                 </div>
@@ -118,10 +118,12 @@
                     data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-4"></div>
-                        <h2>Words of wisdom</h2>
+                        <h2>Naša priča</h2>
                         <blockquote>
-                            <p>“Every tooth in a man’s head is more valuable than a diamond!”</p>
-                            <cite>Cervantes</cite>
+                            <p>Iza sebe imamo bogato kinološko iskustvo u uzgoju pasa jos iz davnih 90-ih godina, da bi se 2008.
+                                godine odlučili za rasu Cane Corso i 2010. godine je zvanično registrovali i tada počinje
+                                priča o našoj odgajivačnici što dokazuju naši rezultati i uspesi pasa iz našeg uzgoja svuda
+                                po svetu</p>
                         </blockquote>
                     </div>
                 </div>
@@ -130,9 +132,9 @@
                     data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-3"></div>
-                        <h2>What we suggest</h2>
+                        <h2>Naš moto</h2>
                         <blockquote>
-                            <p> We suggest you surround yourself with activities that can fasten the recovery process. </p>
+                            <p>Naša odgajivacnica nije samo posao, to je ljubav koju prenosimo na svoju decu</p>
                         </blockquote>
                     </div>
                 </div>
@@ -619,36 +621,131 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="social__block social__block-mobile">
-            <ul class="social">
-                <li>
-                    <a class="fa fa-facebook" href="#">
-                        <span>Facebook</span>
-                    </a>
-                </li>
 
-                <li>
-                    <a class="fa fa-twitter" href="#">
-                        <span>Twitter</span>
-                    </a>
-                </li>
+        <h1>Isotope - filtering</h1>
 
-                <li>
-                    <a class="fa fa-dribbble" href="#">
-                        <span>Dribbble</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a class="fa fa-google-plus" href="#">
-                        <span>Google Plus</span>
-                    </a>
-                </li>
-
-            </ul>
-        </div> -->
-
-
+        <div class="button-group filters-button-group">
+          <button class="button is-checked" data-filter="*">show all</button>
+          <button class="button" data-filter=".metal">metal</button>
+          <button class="button" data-filter=".transition">transition</button>
+          <button class="button" data-filter=".alkali, .alkaline-earth">alkali and alkaline-earth</button>
+          <button class="button" data-filter=":not(.transition)">not transition</button>
+          <button class="button" data-filter=".metal:not(.transition)">metal but not transition</button>
+          <button class="button" data-filter="numberGreaterThan50">number > 50</button>
+          <button class="button" data-filter="ium">name ends with &ndash;ium</button>
+        </div>
+        
+        <div class="grid">
+          <div class="element-item transition metal " data-category="transition">
+            <h3 class="name">Mercury</h3>
+            <p class="symbol">Hg</p>
+            <p class="number">80</p>
+            <p class="weight">200.59</p>
+          </div>
+          <div class="element-item metalloid " data-category="metalloid">
+            <h3 class="name">Tellurium</h3>
+            <p class="symbol">Te</p>
+            <p class="number">52</p>
+            <p class="weight">127.6</p>
+          </div>
+          <div class="element-item post-transition metal " data-category="post-transition">
+            <h3 class="name">Bismuth</h3>
+            <p class="symbol">Bi</p>
+            <p class="number">83</p>
+            <p class="weight">208.980</p>
+          </div>
+          <div class="element-item post-transition metal " data-category="post-transition">
+            <h3 class="name">Lead</h3>
+            <p class="symbol">Pb</p>
+            <p class="number">82</p>
+            <p class="weight">207.2</p>
+          </div>
+          <div class="element-item transition metal " data-category="transition">
+            <h3 class="name">Gold</h3>
+            <p class="symbol">Au</p>
+            <p class="number">79</p>
+            <p class="weight">196.967</p>
+          </div>
+          <div class="element-item alkali metal " data-category="alkali">
+            <h3 class="name">Potassium</h3>
+            <p class="symbol">K</p>
+            <p class="number">19</p>
+            <p class="weight">39.0983</p>
+          </div>
+          <div class="element-item alkali metal " data-category="alkali">
+            <h3 class="name">Sodium</h3>
+            <p class="symbol">Na</p>
+            <p class="number">11</p>
+            <p class="weight">22.99</p>
+          </div>
+          <div class="element-item transition metal " data-category="transition">
+            <h3 class="name">Cadmium</h3>
+            <p class="symbol">Cd</p>
+            <p class="number">48</p>
+            <p class="weight">112.411</p>
+          </div>
+          <div class="element-item alkaline-earth metal " data-category="alkaline-earth">
+            <h3 class="name">Calcium</h3>
+            <p class="symbol">Ca</p>
+            <p class="number">20</p>
+            <p class="weight">40.078</p>
+          </div>
+          <div class="element-item transition metal " data-category="transition">
+            <h3 class="name">Rhenium</h3>
+            <p class="symbol">Re</p>
+            <p class="number">75</p>
+            <p class="weight">186.207</p>
+          </div>
+          <div class="element-item post-transition metal " data-category="post-transition">
+            <h3 class="name">Thallium</h3>
+            <p class="symbol">Tl</p>
+            <p class="number">81</p>
+            <p class="weight">204.383</p>
+          </div>
+          <div class="element-item metalloid " data-category="metalloid">
+            <h3 class="name">Antimony</h3>
+            <p class="symbol">Sb</p>
+            <p class="number">51</p>
+            <p class="weight">121.76</p>
+          </div>
+          <div class="element-item transition metal " data-category="transition">
+            <h3 class="name">Cobalt</h3>
+            <p class="symbol">Co</p>
+            <p class="number">27</p>
+            <p class="weight">58.933</p>
+          </div>
+          <div class="element-item lanthanoid metal inner-transition " data-category="lanthanoid">
+            <h3 class="name">Ytterbium</h3>
+            <p class="symbol">Yb</p>
+            <p class="number">70</p>
+            <p class="weight">173.054</p>
+          </div>
+          <div class="element-item noble-gas nonmetal " data-category="noble-gas">
+            <h3 class="name">Argon</h3>
+            <p class="symbol">Ar</p>
+            <p class="number">18</p>
+            <p class="weight">39.948</p>
+          </div>
+          <div class="element-item diatomic nonmetal " data-category="diatomic">
+            <h3 class="name">Nitrogen</h3>
+            <p class="symbol">N</p>
+            <p class="number">7</p>
+            <p class="weight">14.007</p>
+          </div>
+          <div class="element-item actinoid metal inner-transition " data-category="actinoid">
+            <h3 class="name">Uranium</h3>
+            <p class="symbol">U</p>
+            <p class="number">92</p>
+            <p class="weight">238.029</p>
+          </div>
+          <div class="element-item actinoid metal inner-transition " data-category="actinoid">
+            <h3 class="name">Plutonium</h3>
+            <p class="symbol">Pu</p>
+            <p class="number">94</p>
+            <p class="weight">(244)</p>
+          </div>
+        </div>
+        
         <!--   ALERT MESSAGE    -->
         <div class="alert__block alert__block-name">
             <span>Please enter your name</span>
@@ -685,8 +782,10 @@
         </p>
     </footer>
 
-    <script src="js/bundle.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+    <script src="./webpack/jsFiles/test.js"></script>
+    <script src="js/bundle.js"></script>
     <script src="js/jquery.ba-cond.min.js"></script>
     <script src="js/jquery.slitslider.min.js"></script>
 
