--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                     data-slice2-scale="1.5">
                     <div class="sl-slide-inner">
                         <div class="bg-img bg-img-2"></div>
-                        <h2>Psi su deo našeg života</h2>
                         <blockquote>
-                            <p>Odgajivačnica EMPIRE OF WISDOM osnovana je 2010. godine pod rednim FCI brojem 5042. Nalazimo
-                                se u Srbiji, Novoj Pazovi, na samo 30 km od Beograda i 40 km od Novog Sada</p>
+                                <p>Empire of wisdom</p>
+                            <!-- <p>Odgajivačnica EMPIRE OF WISDOM osnovana je 2010. godine pod rednim FCI brojem 5042. Nalazimo
+                                se u Srbiji, Novoj Pazovi, na samo 30 km od Beograda i 40 km od Novog Sada</p> -->
                         </blockquote>
                     </div>
                 </div>
@@ -582,7 +582,7 @@
             </div>
         </div>
         <iframe class="google_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2824.3553829170273!2d20.211297915215393!3d44.93644297909819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a5eae155df4eb%3A0x64cbb8143fccd6d2!2z0JbQtdC70LXQt9C90LjRh9C60LAgMTA5LCDQndC-0LLQsCDQn9Cw0LfQvtCy0LAgMjIzMzA!5e0!3m2!1ssr!2srs!4v1533991009030"
-            height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            height="450" scrolling="no" frameborder="0" style="border:0" allowfullscreen></iframe>
         <div class="contact__block">
             <div class="container">
                 <!--      FORM      -->
