added modal for standard

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="heading__block" id="step__block">
+                <div class="col-md-12 about__block">
+                    <div class="heading__block" id="about__block">
                         <h2 class="text-center section__heading">O nama</h2>
                         <p class="text-center">Odgajivačnica EMPIRE OF WISDOM osnovana je 2010. godine pod rednim FCI brojem 5042. Nalazimo se u
                             Srbiji, Novoj Pazovi, na samo 30 km od Beograda i 40 km od Novog Sada.</p>
@@ -163,6 +163,46 @@
                             se bavi obukom pasa za zaštitu i čuvanje lica i objekata iz Velike Britanije koja nam je ukazala
                             poverenje i imala uspeha sa mnogim našim psima.</p>
                         <p class="text-center">Naša odgajivačnica nije samo posao, to je ljubav koju prenosimo na svoju decu.</p>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                            Launch demo modal
+                        </button>
+                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        ...
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pet__sitting">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="heading__block" id="pet__sitting">
+                            <h2 class="section__heading text-right">Pansion za pse</h2>
+                        </div>
+
+                    </div>
+                    <div class="col-md-6 pull-right">
+                        <p class="text-justify">U sklopu odgajivačnice nalazi se i pansion za pse. U pansionu se nalazi 15 spoljnih i komfornih boksova
+                            i 15 unutašnjih boksova. Spoljni boksovi su natkriveni sa termo-izolovanim kućicama i pokriveni
+                            video nadzorom. Prostor sa unutrasnjim boksovima je klimatizovan i pokriven video nadzorom. Dežurni
+                            veterinar je na raspolaganju 24/7 . Vršimo usluge kupanja i šisanja pasa. Rad sa psima je svakodnevan.</p>
                     </div>
                 </div>
             </div>
@@ -181,57 +221,57 @@
         <div class="grid">
             <div class="grid-sizer"></div>
             <div class="grid-item element-item transition male" data-category="male">
-              <img src="./img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" />
+                <img src="./img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" />
             </div>
             <div class="grid-item element-item transition male">
-              <img src="./img/gallery/male/Hulio Empire Of Wisdom/14805592_1118601131522011_1141833562_n.jpg" />
+                <img src="./img/gallery/male/Hulio Empire Of Wisdom/14805592_1118601131522011_1141833562_n.jpg" />
             </div>
             <div class="grid-item element-item transition female">
-              <img src="./img/gallery/male/IrmatasBarrakuda/IMG_E5710.JPG" />
+                <img src="./img/gallery/male/IrmatasBarrakuda/IMG_E5710.JPG" />
             </div>
             <div class="grid-item element-item transition female">
-              <img src="./img/gallery/male/Remus Custodi nos/remus (6).jpg" />
+                <img src="./img/gallery/male/Remus Custodi nos/remus (6).jpg" />
             </div>
             <div class="grid-item element-item transition female">
-              <img src="./img/gallery/female/Anja Empire Of Wisdom/Image00003.jpg" />
+                <img src="./img/gallery/female/Anja Empire Of Wisdom/Image00003.jpg" />
             </div>
             <div class="grid-item element-item transition female">
-              <img src="./img/gallery/female/Bela Empire Of Wisdom/Bela Empire Of Wisdom.jpg" />
+                <img src="./img/gallery/female/Bela Empire Of Wisdom/Bela Empire Of Wisdom.jpg" />
             </div>
             <div class="grid-item element-item transition female">
-              <img src="./img/gallery/female/Eudora i Noa Hana/Noa Empire Of Wisdom.jpg" />
+                <img src="./img/gallery/female/Eudora i Noa Hana/Noa Empire Of Wisdom.jpg" />
             </div>
             <div class="grid-item element-item transition female">
-              <img src="./img/gallery/female/Euphoria Empire Of Wisdom/Image00002.jpg" />
+                <img src="./img/gallery/female/Euphoria Empire Of Wisdom/Image00002.jpg" />
             </div>
             <div class="grid-item element-item transition female">
-              <img src="./img/gallery/female/euphoria/IMG_E5722.JPG" />
+                <img src="./img/gallery/female/euphoria/IMG_E5722.JPG" />
             </div>
             <div class="grid-item element-item transition female">
                 <img src="./img/gallery/female/GoAndWinForAfina/IMG_E4909.JPG" />
-              </div>
-              <div class="grid-item element-item transition female">
+            </div>
+            <div class="grid-item element-item transition female">
                 <img src="./img/gallery/female/Hanna Empire Of Wisdom/Image00002.jpg" />
-              </div>
-              <div class="grid-item element-item transition female">
+            </div>
+            <div class="grid-item element-item transition female">
                 <img src="./img/gallery/female/Iramatas Barracuda/Image00005.jpg" />
-              </div>
-              <div class="grid-item element-item transition female">
+            </div>
+            <div class="grid-item element-item transition female">
                 <img src="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatasBlackMamba(3).JPG" />
-              </div>
-              <div class="grid-item element-item transition female">
+            </div>
+            <div class="grid-item element-item transition female">
                 <img src="./img/gallery/female/Katta Strajano/Image00003.jpg" />
-              </div>
-              <div class="grid-item element-item transition female">
+            </div>
+            <div class="grid-item element-item transition female">
                 <img src="./img/gallery/female/Zvezda Adriatiki Winter/IMG_3733.JPG" />
-              </div>
-              <div class="grid-item element-item transition kennel">
+            </div>
+            <div class="grid-item element-item transition kennel">
                 <img src="./img/gallery/kennel/Image00005.jpg" />
-              </div>
-              <div class="grid-item element-item transition kennel">
+            </div>
+            <div class="grid-item element-item transition kennel">
                 <img src="./img/gallery/ostalo/Image00007.jpg" />
-              </div>
-          </div>
+            </div>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -240,20 +280,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="heading__block" id="about__block">
-                        <h2 class="section__heading">About us</h2>
-                    </div>
-                    <p class="section__paragraph">Welcome to Dental Dream, where we make your dreams come true. Efficient and affordable, we welcome you
-                        not only as a client, but also as a friend who came out to visit the beautiful city of Novi Sad.</p>
-                    <p class="section__paragraph">
-                        Right on your arrival, you will be handled by highly trained professionals with a long experience in dentistry and medicine
-                        (since 1995). Our doctors are also professors as well as founders of Dental Dream.</p>
-                    <p class="section__paragraph">
-                        Our team is dedicated to provide you the best service in dentistry, medicine, tourism and guest relationship.
-                    </p>
-                    <div class="col-md-12 text-center partners__block">
-                        <a target="_blank" href="http://www.hotelparkns.com/en/">
-                            <img src="img/hotel_park.jpg" alt="hote park logo">
-                        </a>
+                        <h2 class="section__heading">Naši prijatelji</h2>
                     </div>
                 </div>
             </div>
@@ -288,89 +315,8 @@
         </div>
 
         <!-- OVERFLOW -->
-        <div class="container">
-            <div class="heading__block" id="guide__block">
-                <h2 class="section__heading">Tourist guide</h2>
-                <div class="row guide__block-first">
-                    <div class="col-md-5">
-                        <img class="image__block" src="img/dunavska-street.jpg" alt="novi sad">
-                    </div>
-                    <div class="col-md-7">
-                        <h3>Introducing Novi Sad</h3>
-                        <p>Welcome to Novi Sad, European Capital of Culture! Vibrant and colorful city with a long and dynamic
-                            history. When in Novi Sad, you can fill your days with all sorts of activities. Whether it&#39;s
-                            walking and exploring colorful streets of Old Town, walking along a beautiful Danube quay, or
-                            visiting galleries and museums of Novi Sad. Also, you can cross the Duga bridge and enjoy a breathtaking
-                            landscape on the historical Petrovaradin fortress, that overlooks the city as well as the National
-                            Park of Fruska Gora. Because of its rich and multi-national history, you can hear a couple of
-                            different languages while walking amongst our friendly cohabitants. Whether you visit us in the
-                            summer or winter, you can enjoy yourself on one of our heavenly beaches or magnificent mountains.</p>
-                    </div>
-                </div>
-                <div class="row image__block_row">
-                    <div class="flex__block">
-                        <div class="col-md-3 desktop__image_block">
-                            <div class="image__block" style="background: url(img/hiking.jpg);height: 100%;-webkit-background-size: cover;background-size: cover;background-position: center;background-repeat: no-repeat;"></div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <h3>Hiking</h3>
-                            <p>Besides being beneficial for health, hiking is a great source of pleasure. Once you leave the
-                                crowded streets and traffic, you enter a stress-free zone, surrounded by amazing scenery
-                                and nature. Feel free to contact us about any information or booking. Remember, we are at
-                                Your service.
-                            </p>
-                        </div>
-                        <div class="col-md-12 mobile__image_block">
-                            <div class="image__block" style="background: url(img/hiking.jpg);height: 100%;-webkit-background-size: cover;background-size: cover;background-position: center;background-repeat: no-repeat;"></div>
-                        </div>
-                        <div class="col-md-3">
-                            <h3>Biking</h3>
-                            <p>Due to its structure and geographical position, Novi Sad is considered an ideal city for a bicycle.
-                                You can choose to explore the city on it, as well as getting some fresh air and exersise.
-                                The power and simplicity of two weels is just amazing!</p>
-                        </div>
-                        <div class="col-md-12 mobile__image_block">
-                            <div class="image__block" style="background: url(img/biking.jpg);height: 100%;-webkit-background-size: cover;background-size: cover;background-position: center;background-repeat: no-repeat;"></div>
-                        </div>
-                        <div class="col-md-3 desktop__image_block">
-                            <div class="image__block" style="background: url(img/biking.jpg);height: 100%;-webkit-background-size: cover;background-size: cover;background-position: center;background-repeat: no-repeat;"></div>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="row">
-                    <div class="flex__block">
-                        <div class="col-md-3 desktop__image_block">
-                            <div class="image__block" style="background: url(img/camping.jpg);height: 100%;-webkit-background-size: cover;background-size: cover;background-position: center;background-repeat: no-repeat;"></div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <h3>Camping</h3>
-                            <p>Relief yourself from stress and hectic city life by spending a night by a cosy fire under the
-                                stars. Experience the outdoors at it&#39;s finest, feel the nature and freedom of many beautiful
-                                campsites around Novi Sad, and further.</p>
-                        </div>
-                        <div class="col-md-12 mobile__image_block">
-                            <div class="image__block" style="background: url(img/camping.jpg);height: 100%;-webkit-background-size: cover;background-size: cover;background-position: center;background-repeat: no-repeat;"></div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <h3>River boating</h3>
-                            <p>We are proud to have the greatest European river go through Novi Sad, and outlines the city lines
-                                in the best possible way. Join us as we embark you on a boat trip exploring wild beaches.
-                                Are you a gourmet? Prepare your pallets for new and exquisite traditional Serbian dishes,
-                                enjoying on taverns with gazing view of the powerful Danube.</p>
-                        </div>
-                        <div class="col-md-12 mobile__image_block">
-                            <div class="image__block" style="background: url(img/boat.jpg);height: 100%;-webkit-background-size: cover;background-size: cover;background-position: center;background-repeat: no-repeat;"></div>
-                        </div>
-                        <div class="col-md-3 desktop__image_block">
-                            <div class="image__block" style="background: url(img/boat.jpg);height: 100%;-webkit-background-size: cover;background-size: cover;background-position: center;background-repeat: no-repeat;"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="heading__block" id="about__block">
+            <h2 class="section__heading">Gde se nalazimo</h2>
         </div>
         <iframe class="google_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2824.3553829170273!2d20.211297915215393!3d44.93644297909819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a5eae155df4eb%3A0x64cbb8143fccd6d2!2z0JbQtdC70LXQt9C90LjRh9C60LAgMTA5LCDQndC-0LLQsCDQn9Cw0LfQvtCy0LAgMjIzMzA!5e0!3m2!1ssr!2srs!4v1533991009030"
             height="450" scrolling="no" frameborder="0" style="border:0" allowfullscreen></iframe>
