--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
     </div>
     <main>
-        <div class="container">
+        <section class="container">
             <div class="row">
                 <div class="col-md-12 about__block">
                     <div class="heading__block" id="about__block">
@@ -188,8 +188,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="pet__sitting">
+        </section>
+        <section class="pet__sitting">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -206,76 +206,76 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="gallery__block">
-
-            <div class="heading__block" id="service__block">
-                <h2 class="section__heading">Galerija</h2>
-            </div>
-
-            <div class="button-group filters-button-group">
-                <button class="button is-checked" data-filter="*">Prikaži sve</button>
-                <button class="button" data-filter=".male">Mužjaci</button>
-                <button class="button" data-filter=".female">Ženke</button>
-                <button class="button" data-filter=".kennel">Štenci</button>
-            </div>
-            <div class="grid">
-                <div class="grid-sizer"></div>
-                <div class="grid-item element-item transition male" data-category="male">
-                    <img src="./img/gallery/male/Donald Empire Of Wisdom/dodi.JPG" />
-                </div>
-                <div class="grid-item element-item transition male">
-                    <img src="./img/gallery/male/Hulio Empire Of Wisdom/14805592_1118601131522011_1141833562_n.jpg" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/male/IrmatasBarrakuda/IMG_E5710.JPG" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/male/Remus Custodi nos/remus (6).jpg" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/Anja Empire Of Wisdom/Image00003.jpg" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/Bela Empire Of Wisdom/Bela Empire Of Wisdom.jpg" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/Eudora i Noa Hana/Noa Empire Of Wisdom.jpg" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/Euphoria Empire Of Wisdom/Image00002.jpg" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/euphoria/IMG_E5722.JPG" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/GoAndWinForAfina/IMG_E4909.JPG" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/Hanna Empire Of Wisdom/Image00002.jpg" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/Iramatas Barracuda/Image00005.jpg" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/irmatasBlackMamba(3).JPG" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/Katta Strajano/Image00003.jpg" />
-                </div>
-                <div class="grid-item element-item transition female">
-                    <img src="./img/gallery/female/Zvezda Adriatiki Winter/IMG_3733.JPG" />
-                </div>
-                <div class="grid-item element-item transition kennel">
-                    <img src="./img/gallery/kennel/Image00005.jpg" />
-                </div>
-                <div class="grid-item element-item transition kennel">
-                    <img src="./img/gallery/ostalo/Image00007.jpg" />
-                </div>
-            </div>
-        </div>
-        <div class="container">
+        </section>
+        <section class="container">
             <div class="row">
+                <div id="gallery__block">
+        
+                    <div class="heading__block" id="service__block">
+                        <h2 class="section__heading">Galerija</h2>
+                    </div>
+        
+                    <div class="button-group filters-button-group">
+                        <button class="button is-checked" data-filter="*">Prikaži sve</button>
+                        <button class="button" data-filter=".male">Mužjaci</button>
+                        <button class="button" data-filter=".female">Ženke</button>
+                        <button class="button" data-filter=".kennel">Štenci</button>
+                    </div>
+                    <div class="grid">
+                        <div class="grid-sizer"></div>
+                        <div class="grid-item element-item transition male" data-category="male">
+                            <img src="./img/gallery/male/Donald Empire Of Wisdom/thumb/384038_285205881528211_1446679041_n.jpg" />
+                        </div>
+                        <div class="grid-item element-item transition male">
+                            <img src="./img/gallery/male/Hulio Empire Of Wisdom/thumb/14370377_10153860001190823_3457575012273218172_n.jpg" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/male/IrmatasBarrakuda/thumb/IMG_E4390.JPG" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/male/Remus Custodi nos/thumb/DSCN0954.JPG" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/Anja Empire Of Wisdom/thumb/Image00003.jpg" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/Bela Empire Of Wisdom/thumb/Bela Empire Of Wisdom.jpg" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/Eudora i Noa Hana/thumb/Eudora Empire Of Wisdom.jpg" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/Euphoria Empire Of Wisdom/thumb/Image00002.jpg" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/euphoria/thumb/DSC_0040.JPG" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/GoAndWinForAfina/thumb/IMG_E4906.JPG" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/Hanna Empire Of Wisdom/thumb/Image00001.jpg" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/Iramatas Barracuda/thumb/Image00004.jpg" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/Irmatas Black Mamba For Empire Of Wisdom/thumb/irmatasBlackMamba(2).JPG" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/Katta Strajano/thumb/Image00003.jpg" />
+                        </div>
+                        <div class="grid-item element-item transition female">
+                            <img src="./img/gallery/female/Zvezda Adriatiki Winter/thumb/IMG_3730.JPG" />
+                        </div>
+                        <div class="grid-item element-item transition kennel">
+                            <img src="./img/gallery/kennel/thumb/Image00038.jpg" />
+                        </div>
+                        <div class="grid-item element-item transition kennel">
+                            <img src="./img/gallery/ostalo/thumb/Image00007.jpg" />
+                        </div>
+                    </div>
+                </div>
                 <div class="col-md-12">
                 </div>
             </div>
@@ -286,7 +286,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
         <div class="carousel">
             <div class="carousel__inner">
                 <div>
@@ -322,7 +322,7 @@
         </div>
         <iframe class="google_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2824.3553829170273!2d20.211297915215393!3d44.93644297909819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a5eae155df4eb%3A0x64cbb8143fccd6d2!2z0JbQtdC70LXQt9C90LjRh9C60LAgMTA5LCDQndC-0LLQsCDQn9Cw0LfQvtCy0LAgMjIzMzA!5e0!3m2!1ssr!2srs!4v1533991009030"
             height="450" scrolling="no" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <div class="contact__block">
+        <section class="contact__block">
             <div class="container">
                 <!--      FORM      -->
                 <div class="row">
@@ -359,7 +359,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <!--   ALERT MESSAGE    -->
         <div class="alert__block alert__block-name">
